# library/src/main/java/net/mikhailov/books/library/controller/AuthorApiImpl.java
@@ -1,8 +1,9 @@
 package net.mikhailov.books.library.controller;
 
 import lombok.RequiredArgsConstructor;
-import net.mikhailov.books.library.mapper.AuthorMapper;
-import net.mikhailov.books.library.service.AuthorService;
+import net.mikhailov.books.library.controller.mapper.AuthorAdapter;
+import net.mikhailov.books.library.controller.mapper.AuthorMapper;
+import net.mikhailov.books.library.domain.author.AuthorService;
 import net.mikhailov.books.model.AuthorDTO;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -17,19 +18,37 @@ public class AuthorApiImpl implements AuthorsApi {
     private final AuthorService authorService;
     private final AuthorMapper authorMapper;
 
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Void deleteAuthor(Long authorId) {
+        return null;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public List<AuthorDTO> getAllAuthors() {
         return authorService.getAllAuthors().stream().map(authorMapper::authorToAuthorDTO).toList();
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public AuthorDTO postAuthor(AuthorDTO authorDTO) {
-        return authorMapper.authorToAuthorDTO(authorService.postAuthor(authorMapper.authorDTOToAuthor(authorDTO)));
+        return authorMapper.authorToAuthorDTO(authorService.postAuthor(new AuthorAdapter(authorDTO)));
     }
 
+
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public AuthorDTO putAuthor(Integer authorId, AuthorDTO authorDTO) {
-        return authorMapper.authorToAuthorDTO(authorService.putAuthor(authorId, authorMapper.authorDTOToAuthor(authorDTO)));
+    public AuthorDTO putAuthor(Long authorId, AuthorDTO authorDTO) {
+        return authorMapper.authorToAuthorDTO(authorService.putAuthor(new AuthorAdapter(authorId, authorDTO)));
     }
 
 }
