# library/src/main/resources/openapi/openapi.yaml
@@ -128,6 +128,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/AuthorDTO"
+    delete:
+      operationId: deleteAuthor
+      summary: Удалить автора
+      tags:
+        - Авторы
+      responses:
+        '200':
+          description: Автор удален
+        '404':
+          description: Автор не найден
 components:
   parameters:
     authorId:
@@ -137,14 +147,14 @@ components:
       required: true
       schema:
         type: integer
-        format: int32
+        format: int64
   schemas:
     IdDTO:
       type: object
       properties:
         id:
           type: integer
-          format: int32
+          format: int64
           example: 1
     AuthorListResponse:
       type: array
@@ -158,7 +168,7 @@ components:
       properties:
         id:
           type: integer
-          format: int32
+          format: int64
           example: 1
           readOnly: true
         name:
@@ -181,7 +191,7 @@ components:
         id:
           readOnly: true
           type: integer
-          format: int32
+          format: int64
           example: 1
         title:
           type: string
